--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="src/favicon.ico">
     <link rel="stylesheet" href="src/style/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <title>DS project</title>
 </head>
 
@@ -17,7 +21,7 @@
     <div class="main-menu">
         <ul>
             <li>
-                <button class="btn">Realizar test</button>
+                <button class="btn" onclick="window.location.href='test.html'">Realizar test</button>
             </li>
             <li>
                 <button class="btn">Stuff here</button>
@@ -25,8 +29,12 @@
             <li>
                 <button class="btn">Ver estadísticas</button>
             </li>
+
         </ul>
     </div>
+    <footer>
+        mapa
+    </footer>
 </body>
 
 </html>
