--- a/web/test.html
+++ b/web/test.html
@@ -42,7 +42,8 @@
         </div>
     </div>
     <div class="selec-container">
-        botones
+        <button class="previous btn">Anterior</button>
+        <button class="next btn">Siguiente</button>
     </div>
     <footer class="test-page">
         mapa
