--- a/web/test.html
+++ b/web/test.html
@@ -23,6 +23,8 @@
             $(".owl-carousel").owlCarousel({
                 center: true,
                 loop: false,
+                dots: false,
+                nav: false,
                 margin: 0,
                 responsiveClass: true,
                 responsive: {
@@ -86,9 +88,6 @@
         </div>
         <button class="next btn col-lg-1">Siguiente</button>
     </div>
-    <footer class="test-page">
-        mapa
-    </footer>
 </body>
 
 </html>
