--- a/web/test.html
+++ b/web/test.html
@@ -29,16 +29,13 @@
                 responsiveClass: true,
                 responsive: {
                     0: {
-                        items: 1,
-                        nav: true
+                        items: 1
                     },
                     600: {
-                        items: 3,
-                        nav: false
+                        items: 3
                     },
                     1000: {
                         items: 5,
-                        nav: true,
                         loop: false
                     }
                 }
