--- a/web/test.html
+++ b/web/test.html
@@ -39,27 +39,39 @@
         </div>
         <div class="answers-container">
             <div class="answers">
-                <label>
-                    <input type="radio" name="1" value="1"> El de corto alcance o cruce.</label>
-                <br>
-                <label>
-                    <input type="radio" name="1" value="2"> El de posición o el de corto alcance.</label>
-                <br>
-                <label>
-                    <input type="radio" name="1" value="3"> Ninguno</label>
+                <ul>
+                    <li>
+                        <label class="containerrb">
+                            <input type="radio" name="1" value="1"> El de corto alcance o cruce.
+                            <span class="checkmark"></span>
+                        </label>
+                    </li>
+                    <li>
+                        <label class="containerrb">
+                            <input type="radio" name="1" value="2"> El de posición o el de corto alcance.
+                            <span class="checkmark"></span>
+                        </label>
+                    </li>
+                    <li>
+                        <label class="containerrb">
+                            <input type="radio" name="1" value="3"> Ninguno
+                            <span class="checkmark"></span>
+                        </label>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
     <div class="selec-container row">
-        <div class="col-lg-1 col-md-1 col-sm-1" id="btnleft">
+        <!--div class="col-xl-1 col-lg-1 col-md-1" id="btnleft">
             <button class="previous btn">Anterior</button>
-        </div>
-        <div id="btns" class="owl-carousel owl-theme col-lg-10">
+        </div-->
+        <div id="btns" class="owl-carousel owl-theme col-xl-12 col-lg-12 col-md-12">
 
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-10" id="btnright">
+        <!--div class="col-xl-1 col-lg-1 col-md-1" id="btnright">
             <button class="next btn">Siguiente</button>
-        </div>
+        </div-->
     </div>
 </body>
 
