--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
     <div class="main-menu">
         <ul>
             <li>
-                <button class="btn" onclick="window.location.href='test.html'">Realizar test</button>
+                <button class="btn" onclick="window.location.href='test.jsp'">Realizar test</button>
             </li>
             <li>
                 <button class="btn">Stuff here</button>
