--- a/web/test.html
+++ b/web/test.html
@@ -21,6 +21,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="src/owlcarousel/owl.carousel.min.js"></script>
+    <script src="src/js/touch.js"></script>
     <script src="src/js/main.js"></script>
 
     <title>Test</title>
@@ -79,6 +80,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="drag-controls">
+
     </div>
 
     <div class="selec-container row">
