Style and structure changed. Small improvement in js code

--- a/web/test.html
+++ b/web/test.html
@@ -81,9 +81,7 @@
             </div>
         </div>
     </div>
-    <div class="drag-controls">
-
-    </div>
+    <div class="drag-controls"></div>
 
     <div class="selec-container row">
         <div id="btns" class="owl-carousel owl-theme col-xl-12 col-lg-12 col-md-12"></div>
